--- a/Snacktacular/Info.plist
+++ b/Snacktacular/Info.plist
@@ -54,5 +54,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Spectacular needs access to location in order to show device on map.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Spectacular needs access to location in order to show device on map.</string>
 </dict>
 </plist>
